# Zybo-Z7-20-Pcam-5C-Demo

./: .peers.ini  .vitisWorkspace.json  README.md
hw/: archive_project_summary.txt  hw.xpr  system_wrapper.xsa  vivado.jou  vivado_25516.backup.jou  vivado_4652.backup.jou  vivado_5152.backup.jou  vivado_pid17544.str
hw/hw.cache/wt/: synthesis.wdf  webtalk_pa.xml
hw/hw.runs/.jobs/: vrs_config_1.xml  vrs_config_10.xml  vrs_config_11.xml  vrs_config_2.xml  vrs_config_3.xml  vrs_config_4.xml  vrs_config_5.xml  vrs_config_6.xml  vrs_config_7.xml  vrs_config_8.xml  vrs_config_9.xml
hw/hw.runs/impl_1/: .phys_opt_design.begin.rst  .vivado.begin.rst  clockInfo.txt  gen_run.xml  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  runme.sh  system_wrapper.bit  system_wrapper.tcl  system_wrapper.vdi  system_wrapper_bus_skew_routed.pb  system_wrapper_bus_skew_routed.rpt  system_wrapper_bus_skew_routed.rpx  system_wrapper_clock_utilization_routed.rpt  system_wrapper_control_sets_placed.rpt  system_wrapper_drc_opted.pb  system_wrapper_drc_opted.rpt  system_wrapper_drc_opted.rpx  system_wrapper_drc_routed.pb  system_wrapper_drc_routed.rpt  system_wrapper_drc_routed.rpx  system_wrapper_io_placed.rpt  system_wrapper_methodology_drc_routed.rpt  system_wrapper_methodology_drc_routed.rpx  system_wrapper_power_routed.rpt  system_wrapper_power_summary_routed.pb  system_wrapper_route_status.pb  system_wrapper_route_status.rpt  system_wrapper_timing_summary_routed.pb  system_wrapper_timing_summary_routed.rpt  system_wrapper_timing_summary_routed.rpx  system_wrapper_utilization_placed.pb  system_wrapper_utilization_placed.rpt  tight_setup_hold_pins.txt  vivado.jou  vivado.pb  (+1 more)
hw/hw.runs/synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  runme.sh  system_wrapper.dcp  system_wrapper.tcl  system_wrapper.vds  system_wrapper_utilization_synth.pb  system_wrapper_utilization_synth.rpt  vivado.jou  vivado.pb
hw/hw.runs/system_DVIClocking_0_0_synth_1/: .vivado.begin.rst  gen_run.xml  htr.txt  rundef.js  runme.sh  system_DVIClocking_0_0.dcp  system_DVIClocking_0_0.tcl  system_DVIClocking_0_0.vds  system_DVIClocking_0_0_utilization_synth.pb  system_DVIClocking_0_0_utilization_synth.rpt  vivado.jou  vivado.pb
hw/hw.runs/system_MIPI_CSI_2_RX_0_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  system_MIPI_CSI_2_RX_0_0.tcl  system_MIPI_CSI_2_RX_0_0.vds  system_MIPI_CSI_2_RX_0_0_sim_netlist.v  system_MIPI_CSI_2_RX_0_0_sim_netlist.vhdl  system_MIPI_CSI_2_RX_0_0_stub.v  system_MIPI_CSI_2_RX_0_0_stub.vhdl  system_MIPI_CSI_2_RX_0_0_utilization_synth.pb  (+3 more)
hw/hw.runs/system_v_demosaic_0_0_synth_1/prj/sol/impl/misc/drivers/system_v_demosaic_0_0_v_demosaic_v1_1/src/: CMakeLists.txt  xsystem_v_demosaic_0_0_v_demosaic.c
hw/hw.runs/system_v_gamma_lut_0_0_synth_1/prj/sol/impl/misc/drivers/system_v_gamma_lut_0_0_v_gamma_lut_v1_1/src/: CMakeLists.txt  Makefile  xsystem_v_gamma_lut_0_0_v_gamma_lut.c  xsystem_v_gamma_lut_0_0_v_gamma_lut.h
platform/: vitis-comp.json
platform/zynq_fsbl/: app.yaml  compile_commands.json
(+1400 files in other folders)
